--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="jumbotrom text-center">
                 <h1><span class="fa fa-lock"></span><%= user.username%></h1>
-                <a href="auth/login" class="btn btn-danger"><span class="fa fa-user">Log out</span></a>
+                <a href="auth/logout" class="btn btn-danger"><span class="fa fa-user">Log out</span></a>
                 
 
                 <p style="margin-top: 20px">Welcome to your world <%= user.username%></p>
