--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,6 +11,8 @@
     <body>
         <div class="container">
             <div class="jumbotrom text-center">
+    
+                <img src="<%= user.profileImg %>"/>
                 <h1><span class="fa fa-lock"></span><%= user.username%></h1>
                 <a href="auth/logout" class="btn btn-danger"><span class="fa fa-user">Log out</span></a>
                 
