--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,9 @@
             <div class="jumbotrom text-center">
                 <h1><span class="fa fa-lock"></span>Node Authentication</h1>
                 <p>Login or Registration</p>
+                <a href="auth/login/github" class="btn btn-default"><span class="fa fa-user">Github Login</span></a>
 
-                <a href="auth/login" class="btn btn-default"><span class="fa fa-user">Google Login</span></a>
+                <a href="auth/login/google" class="btn btn-default"><span class="fa fa-user">Google Login</span></a>
             </div>
 
         </div>
